# ihm

./: .gitignore  CMakeLists.txt  GCMode.cpp  GCMode.h  HomePage.cpp  HomePage.h  Homologation.cpp  Homologation.h  InGame.cpp  InGame.h  MainWindow.cpp  MainWindow.h  PreparationMatch.cpp  PreparationMatch.h  TeamChooser.cpp  TeamChooser.h  TestMode.cpp  TestMode.h  TestModeBtn.cpp  TestModeBtn.h  WaintingForTirette.cpp  WaintingForTirette.h  homeButton.cpp  homeButton.h  main.cpp  resource.qrc
preparation/: Lidar.cpp  Lidar.h  OneItemPreparation.cpp  OneItemPreparation.h  TiretteState.cpp  TiretteState.h
tcp/: CMakeLists.txt  MyTCPClient.cpp  MyTCPClient.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.hpp  main.cpp  utils.hpp
